--- a/Makefile.in
+++ b/Makefile.in
@@ -20,6 +20,8 @@ LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ -lpthread -fopenmp
 LDFLAGS_EXTRA=
 PREFIX=@prefix@
+HAS_PYTHON=@HAS_PYTHON@
+PYTHON_PACKAGE_DIR=@PYTHON_PACKAGE_DIR@
 #########################
 
 Z3=z3
@@ -464,3 +466,25 @@ uninstall:
 	@rm -f $(PREFIX)/include/z3_v1.h
 	@rm -f $(PREFIX)/include/z3_macros.h
 	@rm -f $(PREFIX)/include/z3++.h
+
+install-python: $(BIN_DIR)/lib$(Z3).so
+	@if test $(HAS_PYTHON) -eq 0; then echo "Python is not available in your system."; exit 1; fi
+	@echo "Installing Python bindings at $(PYTHON_PACKAGE_DIR)."
+	@cp python/z3.py $(PYTHON_PACKAGE_DIR)
+	@cp python/z3core.py $(PYTHON_PACKAGE_DIR)
+	@cp python/z3types.py $(PYTHON_PACKAGE_DIR)
+	@cp python/z3consts.py $(PYTHON_PACKAGE_DIR)
+	@cp python/z3tactics.py $(PYTHON_PACKAGE_DIR)
+	@cp python/z3printer.py $(PYTHON_PACKAGE_DIR)
+	@cp $(BIN_DIR)/lib$(Z3).so $(PYTHON_PACKAGE_DIR)
+
+uninstall-python: 
+	@if test $(HAS_PYTHON) -eq 0; then echo "Python is not available in your system."; exit 1; fi
+	@echo "Uninstalling Python bindings from $(PYTHON_PACKAGE_DIR)."
+	@rm -f $(PYTHON_PACKAGE_DIR)/z3.py
+	@rm -f $(PYTHON_PACKAGE_DIR)/z3core.py
+	@rm -f $(PYTHON_PACKAGE_DIR)/z3types.py
+	@rm -f $(PYTHON_PACKAGE_DIR)/z3consts.py
+	@rm -f $(PYTHON_PACKAGE_DIR)/z3tactics.py
+	@rm -f $(PYTHON_PACKAGE_DIR)/z3printer.py
+	@rm -f $(PYTHON_PACKAGE_DIR)/$(BIN_DIR)/lib$(Z3).so
