--- a/lib/lib.vcxproj
+++ b/lib/lib.vcxproj
@@ -559,6 +559,7 @@
     <ClCompile Include="dl_mk_simple_joins.cpp" />
     <ClCompile Include="dl_mk_subsumption_checker.cpp" />
     <ClCompile Include="dl_mk_unbound_compressor.cpp" />
+    <ClCompile Include="dl_mk_unfold.cpp" />
     <ClCompile Include="dl_relation_manager.cpp" />
     <ClCompile Include="dl_product_relation.cpp" />
     <ClCompile Include="dl_rule.cpp" />
@@ -1009,6 +1010,7 @@
     <ClInclude Include="dl_mk_similarity_compressor.h" />
     <ClInclude Include="dl_mk_subsumption_checker.h" />
     <ClInclude Include="dl_mk_unbound_compressor.h" />
+    <ClInclude Include="dl_mk_unfold.h" />
     <ClInclude Include="dl_relation_manager.h" />
     <ClInclude Include="dl_product_relation.h" />
     <ClInclude Include="dl_rule_subsumption_index.h" />
