Removed -mmacosx-min-version from the OSX build.
Signed-off-by: Christoph M. Wintersteiger <cwinter@microsoft.com>

--- a/configure.in
+++ b/configure.in
@@ -39,7 +39,7 @@ AS_IF([test "$host_os" = "Darwin"], [
   SLIBFLAGS="-dynamiclib -fopenmp"
   COMP_VERSIONS="-compatibility_version \$(Z3_VERSION) -current_version \$(Z3_VERSION)"
   STATIC_FLAGS=
-  CPPFLAGS+=" -mmacosx-version-min=10.4"
+  CPPFLAGS+=""
 ], [test "$host_os" = "Linux"], [
   PLATFORM=linux
   SO_EXT=so
