--- a/lib/lib.vcxproj
+++ b/lib/lib.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="commercial|Win32">
@@ -528,7 +528,6 @@
     <ClCompile Include="defined_names.cpp" />
     <ClCompile Include="default_tactic.cpp" />
     <ClCompile Include="degree_shift_tactic.cpp" />
-    <ClCompile Include="demodulator.cpp" />
     <ClCompile Include="der.cpp" />
     <ClCompile Include="dimacs.cpp" />
     <ClCompile Include="diff_neq_tactic.cpp" />
@@ -919,7 +918,9 @@
     <ClCompile Include="timer.cpp" />
     <ClCompile Include="trace.cpp" />
     <ClCompile Include="tseitin_cnf_tactic.cpp" />
+    <ClCompile Include="ufbv_rewriter.cpp" />
     <ClCompile Include="ufbv_strategy.cpp" />
+    <ClCompile Include="ufbv_tactic.cpp" />
     <ClCompile Include="unifier.cpp" />
     <ClCompile Include="unit_subsumption_tactic.cpp" />
     <ClCompile Include="upolynomial_factorization.cpp" />
