added missing flags
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/scripts/config-debug.mk.in
+++ b/scripts/config-debug.mk.in
@@ -1,7 +1,7 @@
 
 
 CXX=@CXX@
-CXXFLAGS=@CPPFLAGS@ @CXXFLAGS@ -c -g -Wall -fopenmp -msse -msse2 -mfpmath=sse -fPIC
+CXXFLAGS=@CPPFLAGS@ @CXXFLAGS@ -DZ3DEBUG -D_TRACE -c -g -Wall -fopenmp -msse -msse2 -mfpmath=sse -fPIC
 CXX_OUT_FLAG=-o
 OBJ_EXT=.o
 LIB_EXT=.a
