--- a/scripts/config-debug.mk.in
+++ b/scripts/config-debug.mk.in
@@ -12,3 +12,8 @@ EXE_EXT=
 LINK=@CXX@
 LINK_FLAGS=-lpthread -fopenmp
 LINK_OUT_FLAG=-o
+SO_EXT=@SO_EXT@
+SLINK=@CXX@
+SLINK_FLAGS=@SLIBFLAGS@
+SLINK_EXTRA_FLAGS=@SLIBEXTRAFLAGS@
+SLINK_OUT_FLAG=-o
