removed crazy options
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/configure.ac
+++ b/configure.ac
@@ -115,8 +115,8 @@ AS_IF([test "$host_os" = "Darwin"], [
 ], [test "$host_os" = "Linux"], [
   PLATFORM=linux
   SO_EXT=.so
-  SLIBFLAGS="-shared -fopenmp -Wl,--whole-archive"
-  SLIBEXTRAFLAGS="-Wl,--no-whole-archive"
+  SLIBFLAGS="-shared -fopenmp"
+  SLIBEXTRAFLAGS=
   COMP_VERSIONS=
   STATIC_FLAGS=-static
   CXXFLAGS+=" -fno-strict-aliasing"
@@ -124,8 +124,8 @@ AS_IF([test "$host_os" = "Darwin"], [
    PLATFORM=win
    SO_EXT=.dll
    LDFLAGS=
-   SLIBFLAGS="-shared -fopenmp -Wl,--whole-archive"
-   SLIBEXTRAFLAGS="-Wl,--no-whole-archive"
+   SLIBFLAGS="-shared -fopenmp"
+   SLIBEXTRAFLAGS=
    COMP_VERSIONS=
    CXXFLAGS+=" -D_CYGWIN -fno-strict-aliasing"
 ],
