Added make install/uninstall
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/scripts/config-debug.mk.in
+++ b/scripts/config-debug.mk.in
@@ -1,5 +1,5 @@
 
-
+PREFIX=@prefix@
 CXX=@CXX@
 CXXFLAGS=@CPPFLAGS@ @CXXFLAGS@ -DZ3DEBUG -D_TRACE -c -g -Wall -fopenmp -msse -msse2 -mfpmath=sse
 CXX_OUT_FLAG=-o 
