--- a/scripts/config-release.mk.in
+++ b/scripts/config-release.mk.in
@@ -10,7 +10,7 @@ AR_FLAGS=rcs
 AR_OUTFLAG= 
 EXE_EXT=
 LINK=@CXX@
-LINK_FLAGS=-lpthread -fopenmp
+LINK_FLAGS=-lpthread -fopenmp @LDFLAGS@
 LINK_OUT_FLAG=-o 
 SO_EXT=@SO_EXT@
 SLINK=@CXX@
