--- a/scripts/config-release.mk.in
+++ b/scripts/config-release.mk.in
@@ -10,8 +10,9 @@ AR_FLAGS=rcs
 AR_OUTFLAG= 
 EXE_EXT=
 LINK=@CXX@
-LINK_FLAGS=-lpthread -fopenmp @LDFLAGS@
+LINK_FLAGS=
 LINK_OUT_FLAG=-o 
+LINK_EXTRA_FLAGS=-lpthread -fopenmp @LDFLAGS@
 SO_EXT=@SO_EXT@
 SLINK=@CXX@
 SLINK_FLAGS=@SLIBFLAGS@
